website/versioned_docs/version-0.0.4/api/cloud/cloud.nodejs.md
---
id: version-0.0.4-cloud.nodejs
title: nodejs namespace
hide_title: true
original_id: cloud.nodejs
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Cloud API Overview](overview) &gt; [@adpt/cloud](./cloud.md) &gt; [nodejs](./cloud.nodejs.md)

## nodejs namespace

The library for [Node.js](https://nodejs.org) for Adapt.

<b>Signature:</b>

```typescript
export * from "./NodeService";
export * from "./LocalNodeImage";
//# sourceMappingURL=index.d.ts.map
```

## Functions

|  Function | Description |
|  --- | --- |
|  [default(props)](./cloud.nodejs.default.md) | A partially abstract component that builds Node.js source code into a Container and exposes a NetworkService. |
|  [LocalNodeImage(props)](./cloud.nodejs.localnodeimage.md) | Locally builds a docker image for a [Node.js](https://www.nodejs.org) program. |
|  [NodeService(props)](./cloud.nodejs.nodeservice.md) | A partially abstract component that builds Node.js source code into a Container and exposes a NetworkService. |

## Interfaces

|  Interface | Description |
|  --- | --- |
|  [LocalNodeImageProps](./cloud.nodejs.localnodeimageprops.md) | Props for [nodejs.LocalNodeImage()](./cloud.nodejs.localnodeimage.md) |
|  [NodeImageBuildOptions](./cloud.nodejs.nodeimagebuildoptions.md) | Options controlling how the Docker image is built in [nodejs.LocalNodeImage()](./cloud.nodejs.localnodeimage.md)<!-- -->. |
|  [NodeServiceProps](./cloud.nodejs.nodeserviceprops.md) | Props for [nodejs.NodeService()](./cloud.nodejs.nodeservice.md)<!-- -->. |
