website/versioned_docs/version-0.0.6/api/cloud/cloud.nodejs.md
---
id: version-0.0.6-cloud.nodejs
title: nodejs namespace
hide_title: true
original_id: cloud.nodejs
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Cloud API Overview](overview) &gt; [@adpt/cloud](./cloud.md) &gt; [nodejs](./cloud.nodejs.md)

## nodejs namespace

The library for [Node.js](https://nodejs.org) for Adapt.

<b>Signature:</b>

```typescript
export * from "./NodeService";
export * from "./LocalNodeImage";
export * from "./ReactApp";
//# sourceMappingURL=index.d.ts.map
```

## Functions

|  Function | Description |
|  --- | --- |
|  [default(props)](./cloud.nodejs.default.md) | A partially abstract component that builds Node.js source code into a Container and exposes a NetworkService. |
|  [LocalNodeImage(props)](./cloud.nodejs.localnodeimage.md) | Locally builds a docker image for a [Node.js](https://www.nodejs.org) program. |
|  [NodeService(props)](./cloud.nodejs.nodeservice.md) | A partially abstract component that builds Node.js source code into a Container and exposes a NetworkService. |
|  [ReactApp(props)](./cloud.nodejs.reactapp.md) | A partially abstract component that builds [ReactJS](https://reactjs.org) source code and serves the resulting files via an [http.HttpServer](./cloud.http.httpserver.md)<!-- -->. |

## Interfaces

|  Interface | Description |
|  --- | --- |
|  [LocalNodeImageProps](./cloud.nodejs.localnodeimageprops.md) | Props for [nodejs.LocalNodeImage()](./cloud.nodejs.localnodeimage.md) |
|  [NodeImageBuildOptions](./cloud.nodejs.nodeimagebuildoptions.md) | Options controlling how the Docker image is built in [nodejs.LocalNodeImage()](./cloud.nodejs.localnodeimage.md)<!-- -->. |
|  [NodeServiceProps](./cloud.nodejs.nodeserviceprops.md) | Props for [nodejs.NodeService()](./cloud.nodejs.nodeservice.md)<!-- -->. |
|  [ReactAppProps](./cloud.nodejs.reactappprops.md) | Props for [nodejs.ReactApp()](./cloud.nodejs.reactapp.md)<!-- -->. |
